crates/nuo/src/shell/snapshot_tests/snapshots/nuo__shell__snapshot_tests__tools__ask_user_expanded_cancelled_renders_no_answer.snap
---
source: nuo-tui/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 8)"
---
- Ask 1 question (0ms)
  Proceed with the risky path? (2 options)
  ↳ cancelled — no answer

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
